--- a/clients/next/package.json
+++ b/clients/next/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.5.0",
+    "@chakra-ui/icons": "^1.0.14",
     "@chakra-ui/react": "^1.6.4",
     "@chakra-ui/system": "^1.7.0",
     "@emotion/react": "^11.4.0",
